Create Search Instructor UI Page and Fix Backend with Frontend - close #81
